--- a/console/src/main/resources/application.properties
+++ b/console/src/main/resources/application.properties
@@ -29,11 +29,11 @@ server.port=8848
 ### Specify local server's IP:
 # nacos.inetutils.ip-address=
 
+
 #*************** Config Module Related Configurations ***************#
-### Deprecated configuration property, it is recommended to use `spring.sql.init.platform` replaced.
+### If use MySQL as datasource:
 # spring.datasource.platform=mysql
-# nacos.plugin.datasource.log.enabled=true
-#spring.sql.init.platform=mysql
+
 ### Count of DB:
 # db.num=1
 
@@ -47,6 +47,13 @@ nacos.config.push.maxRetryTime=50
 
 #*************** Naming Module Related Configurations ***************#
 ### Data dispatch task execution period in milliseconds:
+# nacos.naming.distro.taskDispatchPeriod=200
+
+### Data count of batch sync task:
+# nacos.naming.distro.batchSyncKeyCount=1000
+
+### Retry delay in milliseconds if sync task failed:
+# nacos.naming.distro.syncRetryDelay=5000
 
 ### If enable data warmup. If set to false, the server would accept request without local data preparation:
 # nacos.naming.data.warmup=true
@@ -93,19 +100,23 @@ management.metrics.export.influx.enabled=false
 ### If turn on the access log:
 server.tomcat.accesslog.enabled=true
 
-### accesslog automatic cleaning time
+### accesslog automatic cleaning time 
 server.tomcat.accesslog.max-days=30
 
 ### The access log pattern:
 server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b %D %{User-Agent}i %{Request-Source}i
 
 ### The directory of access log:
-server.tomcat.basedir=file:.
-
-
+server.tomcat.basedir=
+spring.datasource.platform=mysql
+db.num=1
+db.url.0=jdbc:mysql://localhost:3306/nacos_config?characterEncoding=utf8&connectTimeout=1000&socketTimeout=10000&autoReconnect=true
+db.user=root
+db.password=123456
 #*************** Access Control Related Configurations ***************#
 ### If enable spring security, this option is deprecated in 1.2.0:
 #spring.security.enabled=false
+
 ### The ignore urls of auth, is deprecated in 1.2.0:
 nacos.security.ignore.urls=/,/error,/**/*.css,/**/*.js,/**/*.html,/**/*.map,/**/*.svg,/**/*.png,/**/*.ico,/console-ui/public/**,/v1/auth/**,/v1/console/health/**,/actuator/**,/v1/console/server/**
 
@@ -217,5 +228,3 @@ nacos.istio.mcp.server.enabled=false
 # nacos.core.protocol.raft.data.read_index_type=ReadOnlySafe
 ### rpc request timeout, default 5 seconds
 # nacos.core.protocol.raft.data.rpc_request_timeout_ms=5000
-### enable to support prometheus service discovery
-#nacos.prometheus.metrics.enabled=true
